[package]
name = "healpix2mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scorus={git='ssh://git@github.com/astrojhgu/scorus.git'}
healpix_fits={git="ssh://git@github.com/astrojhgu/healpix_fits.git"}
kiss3d='0.32.0'
nalgebra='0.30.1'
clap='3.0.6'
